--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
   <title>Jumapel Nads | Checker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    :root {
-      --page-w: 90vw; /* адаптивная ширина */
-      --page-max: 450px;
-    }
-
     html, body {
       margin: 0;
       padding: 0;
@@ -20,34 +15,29 @@
       overflow: hidden;
     }
 
-    /* ====== СЛОИ ====== */
+    /* ===== Слои ===== */
     .layer-fx { z-index: 2; pointer-events: none; }
     .layer-monsters-shadow { z-index: 0; pointer-events: none; }
     .layer-monsters { z-index: 1; pointer-events: none; }
     .layer-checker { z-index: 5; }
     .layer-topimg { z-index: 6; }
 
-    /* ====== КОНТЕЙНЕР ====== */
+    /* ===== Контейнер ===== */
     .stack {
       position: relative;
-      width: var(--page-w);
-      max-width: var(--page-max);
+      width: 90vw;
+      max-width: 450px;
       margin: 20px auto 0 auto;
     }
 
-    /* ====== ВЕРХНЯЯ КАРТИНКА ====== */
-    .top-image {
-      position: relative;
-      width: 100%;
-      margin: 0 auto 10px auto;
-    }
+    /* ===== Верхняя картинка ===== */
     .top-image img {
       width: 100%;
       height: auto;
       display: block;
     }
 
-    /* ====== ЧЕКЕР ====== */
+    /* ===== Чекер ===== */
     .checker {
       position: relative;
       width: 100%;
@@ -66,7 +56,6 @@
     }
     #walletInput {
       flex: 1;
-      min-width: 0;
       padding: 12px 15px;
       font-size: 16px;
       border-radius: 10px;
@@ -79,18 +68,13 @@
       cursor: pointer;
       padding: 0;
     }
-    #checkBtn:disabled {
-      opacity: 0.5;
-      pointer-events: none;
-    }
+    #checkBtn:disabled { opacity: 0.5; pointer-events: none; }
     .beret-btn {
       width: 140px;
       transition: transform 0.2s ease;
       display: block;
     }
-    .beret-btn:hover {
-      transform: scale(1.05) rotate(-2deg);
-    }
+    .beret-btn:hover { transform: scale(1.05) rotate(-2deg); }
     #result {
       text-align: center;
       margin-top: 10px;
@@ -99,108 +83,88 @@
       min-height: 22px;
     }
 
-    /* ====== ЭФФЕКТЫ (билеты, береты, пузыри) ====== */
-    .fx-field {
-      position: fixed;
-      left: 0;
-      bottom: -120px;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .fx-item {
-      position: absolute;
-      bottom: -120px;
-      left: 0;
-      transform: translateX(var(--x, 0)) translateY(0) rotate(0deg);
-      opacity: 0;
-      animation-iteration-count: infinite;
-      animation-timing-function: linear;
-      animation-fill-mode: forwards;
-      will-change: transform, opacity;
-      pointer-events: none;
-    }
-    .ticket-item img { width: var(--size, 110px); height: auto; display: block; }
-    .ticket-item { animation-name: flyTicket; animation-duration: var(--dur, 7s); animation-delay: var(--delay, 0s); }
-    @keyframes flyTicket {
-      0% { transform: translateX(var(--x, 0)) translateY(0) rotate(0deg); opacity: 0; }
-      5% { opacity: 1; }
-      100% { transform: translateX(calc(var(--x, 0) + 120px)) translateY(-110vh) rotate(360deg); opacity: 0; }
-    }
-    .beret-item img { width: var(--size, 95px); height: auto; display: block; }
-    .beret-item { animation-name: flyBeret; animation-duration: var(--dur, 9s); animation-delay: var(--delay, 0s); }
-    @keyframes flyBeret {
-      0% { transform: translateX(var(--x, 0)) translateY(0) rotate(0deg); opacity: 0; }
-      10% { opacity: 1; }
-      100% { transform: translateX(calc(var(--x, 0) - 160px)) translateY(-120vh) rotate(-720deg); opacity: 0; }
-    }
-    .bubble-item {
-      width: var(--size, 40px);
-      height: var(--size, 40px);
-      background: rgba(255,255,255,0.22);
-      border-radius: 50%;
-      animation-name: flyBubble;
-      animation-duration: var(--dur, 12s);
-      animation-delay: var(--delay, 0s);
-      box-shadow: inset -6px -10px 18px rgba(255,255,255,0.25),
-                  inset 6px 10px 18px rgba(0,0,0,0.08);
-      backdrop-filter: blur(2px);
-    }
-    @keyframes flyBubble {
-      0% { transform: translateX(var(--x, 0)) translateY(0) scale(1); opacity: 0.4; }
-      50% { opacity: 0.9; }
-      100% { transform: translateX(calc(var(--x, 0) + 40px)) translateY(-110vh) scale(1.6); opacity: 0; }
-    }
-
-    /* ====== МОНСТРЫ ====== */
+    /* ===== Монстры ===== */
     .monsters-shadow, .monsters {
       position: fixed;
-      bottom: 0;
+      bottom: -15vh; /* монстры "ныряют" под экран */
       left: 0;
       width: 100%;
       display: flex;
       justify-content: space-between;
       align-items: flex-end;
       pointer-events: none;
-      padding: 0 5vw;
+      padding: 0 3vw;
     }
     .monsters-shadow {
       opacity: 0.4;
       filter: grayscale(1) brightness(0.3) blur(2px);
     }
-    .monsters .monster,
-    .monsters-shadow .shadow {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-    }
     .monsters img,
     .monsters-shadow img {
-      max-height: 35vh;
+      height: 70vh; /* одинаковый рост */
       width: auto;
+      object-fit: contain;
     }
-    .monsters .center img,
-    .monsters-shadow .center img {
-      max-height: 45vh;
+    /* поправка для пчелы */
+    .monsters div:nth-child(1) img,
+    .monsters-shadow div:nth-child(1) img {
+      transform: translateY(5vh);
     }
-    .monsters-shadow .center img { animation: shadowFloat 10s ease-in-out infinite; }
-    @keyframes shadowFloat { 0%, 100% { transform: translateY(5%); } 50% { transform: translateY(-5%); } }
-    .monsters img { transform-origin: bottom center; animation: monsterPeek 5s ease-in-out infinite; }
-    .monsters .center img { animation: monsterPeekCenter 5s ease-in-out infinite; }
-    @keyframes monsterPeek { 0%, 100% { transform: translateY(15%) rotate(0deg); } 50% { transform: translateY(0) rotate(3deg); } }
-    @keyframes monsterPeekCenter { 0%, 100% { transform: translateY(20%) scale(1); } 50% { transform: translateY(0) scale(1.05); } }
+    /* центр без смещения */
+    .monsters div:nth-child(2) img,
+    .monsters-shadow div:nth-child(2) img {
+      transform: translateY(0);
+    }
+    /* фиолетовый чуть ниже */
+    .monsters div:nth-child(3) img,
+    .monsters-shadow div:nth-child(3) img {
+      transform: translateY(3vh);
+    }
+    .monsters img { animation: monsterPeek 6s ease-in-out infinite; }
+    @keyframes monsterPeek {
+      0%, 100% { transform: translateY(10%) rotate(0deg); }
+      50% { transform: translateY(0) rotate(2deg); }
+    }
+
+    /* ===== Эффекты (Tickets, Berets, Bubbles) ===== */
+    .fx-container {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      overflow: hidden;
+      pointer-events: none;
+    }
+    .ticket, .beret, .bubble {
+      position: absolute;
+      display: block;
+    }
+    .ticket img, .beret img {
+      width: 40px;
+      opacity: 0.8;
+    }
+    .bubble {
+      width: 20px; height: 20px;
+      border-radius: 50%;
+      background: rgba(255,255,255,0.5);
+      box-shadow: 0 0 10px rgba(255,255,255,0.7);
+    }
+    @keyframes fall {
+      0% { transform: translateY(-10%); opacity: 1; }
+      100% { transform: translateY(110vh); opacity: 0; }
+    }
+    @keyframes rise {
+      0% { transform: translateY(110vh) scale(0.5); opacity: 0.8; }
+      100% { transform: translateY(-10vh) scale(1.2); opacity: 0; }
+    }
   </style>
 </head>
 <body>
-  <!-- ВЕРХНЯЯ КАРТИНКА -->
+  <!-- Верхняя картинка -->
   <div class="stack layer-topimg">
-    <div class="top-image">
-      <img src="foto9.png" alt="Foto9" class="foto9">
-    </div>
+    <div class="top-image"><img src="foto9.png" alt="Foto9"></div>
   </div>
 
-  <!-- ЧЕКЕР -->
+  <!-- Чекер -->
   <div class="stack layer-checker">
     <div class="checker">
       <div class="row">
@@ -213,41 +177,22 @@
     </div>
   </div>
 
-  <!-- ЭФФЕКТЫ (фон) -->
-  <div class="fx-field layer-fx" aria-hidden="true">
-    <!-- билеты -->
-    <div class="fx-item ticket-item" style="--x:10vw; --delay:0.5s; --dur:7.5s; --size:110px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:30vw; --delay:2.2s; --dur:6.2s; --size:120px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:55vw; --delay:1.4s; --dur:8.4s; --size:105px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:72vw; --delay:3.1s; --dur:7.0s; --size:115px;"><img src="haha_20.png" alt=""></div>
-    <div class="fx-item ticket-item" style="--x:85vw; --delay:4.0s; --dur:6.6s; --size:100px;"><img src="haha_20.png" alt=""></div>
-    <!-- береты -->
-    <div class="fx-item beret-item" style="--x:18vw; --delay:1.0s; --dur:9.2s; --size:95px;"><img src="bar_out_18.png" alt=""></div>
-    <div class="fx-item beret-item" style="--x:42vw; --delay:2.8s; --dur:7.8s; --size:100px;"><img src="bar_out_18.png" alt=""></div>
-    <div class="fx-item beret-item" style="--x:63vw; --delay:0.7s; --dur:9.8s; --size:90px;"><img src="bar_out_18.png" alt=""></div>
-    <div class="fx-item beret-item" style="--x:77vw; --delay:3.6s; --dur:8.6s; --size:92px;"><img src="bar_out_18.png" alt=""></div>
-    <!-- пузыри -->
-    <div class="fx-item bubble-item" style="--x:8vw; --delay:0.4s; --dur:13s; --size:38px;"></div>
-    <div class="fx-item bubble-item" style="--x:25vw; --delay:1.9s; --dur:15s; --size:44px;"></div>
-    <div class="fx-item bubble-item" style="--x:40vw; --delay:3.0s; --dur:12s; --size:36px;"></div>
-    <div class="fx-item bubble-item" style="--x:58vw; --delay:0.8s; --dur:16s; --size:50px;"></div>
-    <div class="fx-item bubble-item" style="--x:73vw; --delay:2.5s; --dur:14s; --size:42px;"></div>
-    <div class="fx-item bubble-item" style="--x:90vw; --delay:4.0s; --dur:18s; --size:46px;"></div>
-  </div>
-
-  <!-- ТЕНИ МОНСТРОВ -->
+  <!-- Тени монстров -->
   <div class="monsters-shadow layer-monsters-shadow">
-    <div class="shadow left"><img src="game7.png" alt="Shadow Left"></div>
-    <div class="shadow center"><img src="game6.png" alt="Shadow Center"></div>
-    <div class="shadow right"><img src="game8.png" alt="Shadow Right"></div>
+    <div><img src="game7.png" alt="Shadow Left"></div>
+    <div><img src="game6.png" alt="Shadow Center"></div>
+    <div><img src="game8.png" alt="Shadow Right"></div>
   </div>
 
-  <!-- МОНСТРЫ -->
+  <!-- Монстры -->
   <div class="monsters layer-monsters">
-    <div class="monster left"><img src="game7.png" alt="Monster Left"></div>
-    <div class="monster center"><img src="game6.png" alt="Monster Center"></div>
-    <div class="monster right"><img src="game8.png" alt="Monster Right"></div>
+    <div><img src="game7.png" alt="Monster Left"></div>
+    <div><img src="game6.png" alt="Monster Center"></div>
+    <div><img src="game8.png" alt="Monster Right"></div>
   </div>
+
+  <!-- Эффекты -->
+  <div class="fx-container layer-fx" id="fx"></div>
 
   <script>
     const SHEET_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR7fSRfFR8_HLtisRRchcKyifgwyI3VxuOd727mczJRSsyMQH2M0wKowB9luUWP8Q-oJsMv34_7o1Gi/pub?output=csv";
@@ -264,6 +209,8 @@
       document.getElementById("walletInput").addEventListener("keypress", e => {
         if (e.key === "Enter") checkWallet();
       });
+
+      startFX(); // эффекты
     });
 
     async function loadWhitelist() {
@@ -279,14 +226,9 @@
           .map(addr => (addr || "").trim().replace(/['"]/g, "").toLowerCase())
           .filter(addr => addr.length > 0);
         whitelist = Array.from(new Set(whitelist));
-        console.log("Whitelist загружен:", whitelist.length, "адресов");
       } catch (err) {
         console.error("Whitelist load error:", err);
-        const resultEl = document.getElementById("result");
-        if (resultEl) {
-          resultEl.innerText = "Whitelist load error 😢";
-          resultEl.style.color = "#ffaaaa";
-        }
+        document.getElementById("result").innerText = "Whitelist load error 😢";
       }
     }
 
@@ -296,9 +238,7 @@
       if (!inputEl || !resultEl) return;
 
       const input = inputEl.value.trim().toLowerCase();
-
-      // очищаем поле после проверки
-      inputEl.value = "";
+      inputEl.value = ""; // очищаем поле
 
       if (!input) {
         resultEl.innerText = "Enter wallet address!";
@@ -314,6 +254,47 @@
         resultEl.innerText = "❌ Address not found in whitelist.";
         resultEl.style.color = "#ff6688";
       }
+    }
+
+    /* ===== FX ===== */
+    function startFX() {
+      const fx = document.getElementById("fx");
+
+      function spawnTicket() {
+        const el = document.createElement("div");
+        el.className = "ticket";
+        el.style.left = Math.random() * 100 + "vw";
+        el.style.top = "-10%";
+        el.style.animation = `fall ${6 + Math.random() * 4}s linear forwards`;
+        el.innerHTML = `<img src="ticket.png" alt="ticket">`;
+        fx.appendChild(el);
+        setTimeout(() => el.remove(), 10000);
+      }
+
+      function spawnBeret() {
+        const el = document.createElement("div");
+        el.className = "beret";
+        el.style.left = Math.random() * 100 + "vw";
+        el.style.top = "-10%";
+        el.style.animation = `fall ${5 + Math.random() * 5}s linear forwards`;
+        el.innerHTML = `<img src="beret.png" alt="beret">`;
+        fx.appendChild(el);
+        setTimeout(() => el.remove(), 10000);
+      }
+
+      function spawnBubble() {
+        const el = document.createElement("div");
+        el.className = "bubble";
+        el.style.left = Math.random() * 100 + "vw";
+        el.style.bottom = "-5%";
+        el.style.animation = `rise ${6 + Math.random() * 4}s ease-in forwards`;
+        fx.appendChild(el);
+        setTimeout(() => el.remove(), 10000);
+      }
+
+      setInterval(spawnTicket, 2500);
+      setInterval(spawnBeret, 4000);
+      setInterval(spawnBubble, 1200);
     }
   </script>
 </body>
